# control_task

./: Procedure.md  README.md
controller_task_node/: CMakeLists.txt  package.xml
controller_task_node/include/controller_task_node/: calculateDistance.hpp  calculateSteeringAngle.hpp  controller.hpp
controller_task_node/src/: controller.cpp
dependencies/sample_sensor_kit_launch/sample_sensor_kit_launch/: package.xml
launch/tier4_simulator_launch/: CMakeLists.txt  package.xml
launch/tier4_simulator_launch/launch/: simulator.launch.xml
launch/tier4_simulator_launch/rviz/: autoware.rviz
