<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tier4_simulator_launch</name>
  <version>0.1.0</version>
  <description>The tier4_simulator_launch package</description>
  <maintainer email="keisuke.shima@tier4.jp">Keisuke Shima</maintainer>
  <maintainer email="takayuki.murooka@tier4.jp">Takayuki Murooka</maintainer>
  <maintainer email="takamasa.horibe@tier4.jp">Takamasa Horibe</maintainer>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <maintainer email="taiki.tanaka@tier4.jp">Taiki Tanaka</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <exec_depend>ad_api_adaptors</exec_depend>
  <exec_depend>global_parameter_loader</exec_depend>
  <exec_depend>python3-bson</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>simple_planning_simulator</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
